--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <p>this is a boy</p>
+      </div>
+    </footer>
   </body>
 </html>
